#127 Fixed countdown spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -332,7 +332,7 @@ td {
   top: 50%;
   left: 50%;
   width: 500px;
-  height: 220px;
+  height: 200px;
   transform: translateX(-50%) translateY(-50%);
   text-align: top center;
   background: rgba(245, 245, 245, 0.1);
@@ -349,6 +349,12 @@ tr:nth-child(3) td {
 }
 .info-data {
   font-size: 4em;
+  padding-bottom: 0;
+  margin: 0;
+}
+#info-data-labels>td {
+  padding: 0;
+  height: 25px;
 }
 
 /* -------------- */
